# caravel

./: .gitignore  CMakeLists.txt  README.md  build.sh  caravel  conanfile.txt  output.pcap  win_to_rpi
config/: toolchain-arm.cmake
ethernet/: log.txt  summary.txt
include/: actors.h  application.h  main.h  signal.h  utils.h
include/actors/: actors.h  cyclic_msg_act.h  ethernet_act.h  exit_act.h  inspector.h  log_msg_act.h  middleman_act.h  output_msg_act.h  parse_file_act.h  parse_input_act.h  parse_simulate_act.h  parse_simulation_act.h  receive_input_act.h  receive_msg_act.h  send_msg_act.h
logs/: output.pcap
src/: actors.cpp  application.cpp  main.cpp  signal.cpp  utils.cpp
src/actors/: actors.cpp  cyclic_msg_act.cpp  ethernet_act.cpp  exit_act.cpp  log_msg_act.cpp  middleman_act.cpp  output_msg_act.cpp  parse_file_act.cpp  parse_input_act.cpp  parse_simulate_act.cpp  parse_simulation_act.cpp  receive_input_act.cpp  receive_msg_act.cpp  send_msg_act.cpp
test/: caravel_command_ex.cfg  interactive_parser_ex.txt  send_ex.txt  simulation.txt
